# musiclinksconverter

./: Cargo.toml  README.md
src/: main.rs
src/services/: deezer.rs  mod.rs  spotify.rs
