[package]
name = "musiclinks_converter"
version = "0.1.0"
authors = ["David Camperos <davidapks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["macros", "sync"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
tbot = "0.5.1"